# QuantumFluxLab

./: .gitignore  CHANGELOG.md  LICENSE  PUSHER_DEPLOY.md  README.md  USAGE.md  bluesky_followup.txt  demo.txt  pusher_prompt_v1.3.0.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  safety_first.md
.github/workflows/: ci.yml  release-promotion.yml  release.yml
bom/: BOM.csv
code/: qfl_control.py  qfl_controller.ino
diagrams/: wiring.mmd
docs/: 2026-02-08-ai-physics-4.md  2026-02-08-quantum-breakthrough-2.md  2026-02-08-temporal-periodicity-1.md  BREAKTHROUGHS.md  MAIN_REPORT.md
docs/images/: README.md
src/: __init__.py  api.py  cli_extras.py  physics_ideas.py  requirements.txt  scraper.py  universal_scanner.py  whitelist.json
src/synapsescanner/: __init__.py  citations.py  cli_extras.py  universal_scanner.py
src/synapsescanner/exporters/: __init__.py  json.py
src/synapsescanner/sources/: __init__.py  arxiv.py  biorxiv.py  pubmed.py  semantic_scholar.py
synapsescanner/: __init__.py  ai.py  autodocs.py  cache.py  cli_extras.py  config.py  crossref.py  git_autocommit.py  requirements.txt  universal_scanner.py
synapsescanner/exporters/: obsidian.py
tests/: __init__.py  test_budget.py  test_citations.py  test_crossref.py  test_safety.py  test_scraper.py  test_sources.py
ui/: app.js  breadboard.html  index.html  style.css  thought-map.html
